[metadata]
name = hybrid-enose
description = Data analysis for hybrid-enose
author = Aung Khant Maw
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    models
    components

install_requires =
    numpy>=1.23.5
    pandas>=1.5.2
    sklearn==0.0.post1
    dash>=2.7.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.2.0
    pytest-cov>=4.0.0
    mypy>=0.991
    flake8>=6.0.0
    tox>=3.27.1

[options.package_data]
components = py.typed
models = py.typed

[flake8]
max-line-length = 160